Fixes section title wrapping

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -616,7 +616,6 @@ a {
     border-bottom: 2px solid #914db3;
     border-radius: 8px;
     color: #f2f2f2;
-    margin: 0 0.25em;
     padding: 2px 10px;
     text-align: center;
     vertical-align: bottom;
